2011-06-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8:
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Incorporate more useful hints from Denis Heimbigner when DAP fails

2011-06-26  Charlie Zender  <zender@uci.edu>

	* Remove UDUNITS section of configure.in because it was overly
	complex to maintain it at same time as UDUNITS2 which supercedes it

	* Remove DAP-OPENDAP section of configure.in because it was overly 
	complex to maintain it at same time as DAP-NETCDF which supercedes it

	* Re-introduce ENABLE_NETCDF4

	* Remove MPI section of configure.in because it was nasty and unsupported

	* Remove non-working CPPFLAGS += -DHAVE_NETCDF4_H hack from debian/rules

	* Use AC_CHECK_DECL() instead of AC_EGREP_HEADER() to find
	NC_CHUNKED in test to define HAVE_NETCDF4_H. Suggested by
	anonymous poster on Bug tracker, may improve netCDF4 configure
	problems considerably.

	* Add lat_bnd, time_bnds to in.cdl to improve CF "bounds" handling

	* Do not ship .la files in Debian (Closes: #622527) by Luk Claes

2011-06-10  Charlie Zender  <zender@uci.edu>

	* #define NCO_XLC_LIKELY when xlC compiler probably used

2011-06-08  Charlie Zender  <zender@uci.edu>

	* #define NCO_XLC_LIKELY when xlc compiler probably used

2011-06-02  Charlie Zender  <zender@uci.edu>

	* Add include ncra -Y, --pseudonym to ncks --secret output

2011-05-20  Charlie Zender  <zender@uci.edu>

	* configure.in modifications as per ocehugo suggestions

2011-05-10  Charlie Zender  <zender@uci.edu>

	* Webpage updates

	* NB: Debian pbuilder has been broken on Ubuntu Natty Narwhal for weeks
	This prevents serious work on a 4.0.9 release, improving configure, etc.

2011-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.8 release procedure:
 	Changes since nco-4_0_7: HPSS, NOFILL, CF bounds & noleap, ncatted, NC_BYTE