@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1129 2011-06-26 22:47:29 zender Exp $ 
+$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1130 2011-06-27 23:07:21 zender Exp $ 
 
 # Purpose: TODO items for NCO
 
@@ -735,7 +735,9 @@ nco1015. nco: eliminate ncap2 -A option from documentation
 nco1016. nco: re-test TODO nco997 with netcdf 4.1.2
 nco1020. nco: re-base record bounds variables (e.g., time_bnds) in ncrcat
 nco1021. nco: use owner axes for printing CF-time in bounds attributes 
-nco1022. 
+nco1022. nco: ncrcat core-dumps with double-free() error when concatenating record dimensions with non-time units
+	 ncrcat -D 3 -O -h ~/foo_1.nc ~/foo_2.nc ~/foo.nc
+nco1023. 
 qrk
 ************************************************************************
 End ncoXXX TODOs
