@@ -6,6 +6,14 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
 	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1
 
+	* Clean-up UDUnits in preparation for solving TODO nco1022
+
+	* Verify dpkg-buildpackage produces netCDF4-, UDUnits2-, DAP-enable NCO
+	against current daily snapshot of netCDF 4.1.3, HDF 1.8.7.
+
+	* Verify pbuilder          produces netCDF4-, UDUnits2-, DAP-enable NCO
+	against current debian Sid
+
 	* Incorporate more useful hints from Denis Heimbigner when DAP fails
 
 2011-06-26  Charlie Zender  <zender@uci.edu>
